--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,17 @@
     "minimum-stability": "dev",
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^6.1"
+        "phpunit/phpunit": "^6.1",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-0": {
             "PHPUnitTutorial": "src/"
         }
+    },
+    "scripts": {
+      "cs": "./vendor/bin/phpcs --standard=PSR2 -n src/",
+      "unit": "vendor/bin/phpunit --bootstrap src/PHPUnitTutorial/User.php tests/unit/PHPUnitTutorial/UserTest --coverage-text --testdox",
+      "test": ["@cs", "", "echo OK", "", "@unit", "",  "echo End"]
     }
 }
