--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^7.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.1",
         "squizlabs/php_codesniffer": "*"
@@ -20,7 +22,6 @@
     },
     "scripts": {
       "cs": "./vendor/bin/phpcs --standard=PSR2 -n src/",
-      "cbf": "php -d \"disable_functions=\" ./vendor/bin/phpcbf --standard=PSR2 -n src/",
       "unit": "vendor/bin/phpunit --bootstrap src/PHPUnitTutorial/User.php tests/unit/PHPUnitTutorial/UserTest --coverage-text --testdox",
       "test": ["@cs", "", "echo OK", "", "@unit", "",  "echo End"]
     }
